<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="32dp">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:src="@drawable/login_icon"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Welcome Back"
        android:textColor="@color/black"
        android:textSize="@dimen/font_x_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in_to_your_account"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/person_image_view"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginBottom="18dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.25" />

    <AutoCompleteTextView
        android:id="@+id/login_edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/prompt_name"
        android:layout_marginTop="20dp"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="40"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/person_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <AutoCompleteTextView
        android:id="@+id/login_edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/prompt_email"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="40"
        android:maxLines="1"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/login_edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/prompt_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_text_email" />

    <Button
        android:id="@+id/login_button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_orange_btn_selector"
        android:text="@string/login_button_text"
        android:textColor="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_text_password" />


    <Button
        android:id="@+id/button_google"
        style="?android:textAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:padding="@dimen/font_very_extra_small"
        android:text="@string/label_chnage_number"
        android:textColor="@color/Red_DarkCyan"
        android:textSize="@dimen/font_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button_sign_in" />

    <Button
        android:id="@+id/button_facebook"
        style="?android:textAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="0.5"
        android:padding="@dimen/font_very_extra_small"
        android:text="@string/label_forgot_password"
        android:textColor="@color/dot_dark_screen3"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button_sign_in" />


    <ProgressBar
        android:id="@+id/login_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
